-Reto 0: Se actualiza el manejo de cadenas de texto para utilizar strings.xml

--- a/Reto 0/res/values/strings.xml
+++ b/Reto 0/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Reto 0</string>
+    <string name="mensaje_hello_world">Hola mundo, Reto 0!</string>
+    <string name="mensaje_author">Autor: Christian Ortega</string>
 </resources>
