-Reto 5: Implementada la carga de imagenes personalizadas y los sonidos de juego

--- a/Reto 5/AndroidTicTacToe-Tutorial2/app/src/main/res/values/strings.xml
+++ b/Reto 5/AndroidTicTacToe-Tutorial2/app/src/main/res/values/strings.xml
@@ -37,6 +37,10 @@
     <string name="difficulty_harder">Difícil</string>
     <string name="difficulty_expert">Nivel Dios</string>
 
+    <string name="sound_choose">Sonido</string>
+    <string name="sound_off">Desactivar</string>
+    <string name="sound_on">Activar</string>
+
     <string name="quit_question">¿Desea abadonar la diversión?</string>
     <string name="yes">Sí&#8230;</string>
     <string name="no">¡Ni loco!</string>
